--- a/aws-nuke-config.yaml
+++ b/aws-nuke-config.yaml
@@ -54,6 +54,7 @@ resource-types:
     - SNSSubscription
     - CloudWatchEventsRule
     - CloudTrailTrail
+    - BatchComputeEnvironment
 
 
 presets:
