--- a/aws-nuke-config.yaml
+++ b/aws-nuke-config.yaml
@@ -50,6 +50,7 @@ resource-types:
     - ElasticTranscoderPipeline # Deprecated service
     - ConfigServiceConfigurationRecorder # Control Tower managed/Protected by SCPs
     - ConfigServiceDeliveryChannel # Control Tower managed/Protected by SCPs
+    - CloudTrailTrail # Control Tower managed/Protected by SCPs
 
 presets:
   organization:
